gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: carinfo-frontend-gateway
  namespace: carinfo
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80 
      name: http
      protocol: HTTP
    hosts:
    - carinfo.SUFFIX
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  name: carinfo
spec:
  hosts:
  - carinfo.SUFFIX
  - frontend-1-1.carinfo.svc.cluster.local
  gateways:
  - carinfo-frontend-gateway
  http:
    - route:
      - destination:
          host: frontend-1-1.carinfo.svc.cluster.local
          port:
            number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
  namespace: carinfo
spec:
  host: frontend-1-1.carinfo.svc.cluster.local
